# slack-timezoner

./: README.md  group_by_timezones.py  minimal.py  pyproject.toml  sample.env
tests/: test_slack_timezoner.py
